--- a/backend/Gemfile
+++ b/backend/Gemfile
@@ -44,4 +44,7 @@ group :development, :test do
 
   # Omakase Ruby styling [https://github.com/rails/rubocop-rails-omakase/]
   gem "rubocop-rails-omakase", require: false
+
+group :test do
+  gem 'shoulda', '~> 4.0'
 end
